force-app/main/default/objects/RMA__c/RMA__c.object-meta.xml
<CustomObject>
    <description>Return Material Handling</description>
    <label>RMA</label>
    <nameField>
        <displayFormat>RMA{0000}</displayFormat>
        <label>RMA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RMAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>