force-app/main/default/objects/RMA__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Account to which the RMA relates</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RMAs</relationshipLabel>
    <relationshipName>RMA</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>