force-app/main/default/objects/RMA__c/fields/Account_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Text__c</fullName>
    <formula>Account_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name Text</label>
    <type>Text</type>
</CustomField>