force-app/main/default/objects/RMA__c/fields/Account_Prio__c.field-meta.xml
<CustomField>
    <fullName>Account_Prio__c</fullName>
    <description>Account Priority (copied from Account record)</description>
    <formula>case(Account_Name__r.Priority__c,
&quot;A&quot;,&quot;A&quot;,
&quot;B&quot;,&quot;B&quot;,
&quot;C&quot;,&quot;C&quot;,
&quot;Z&quot;,&quot;Z&quot;,
&quot;X&quot;,&quot;X&quot;,
&quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account Priority</inlineHelpText>
    <label>Account Prio</label>
    <type>Text</type>
</CustomField>