force-app/main/default/objects/RMA__c/fields/Application_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Application_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RMAs1</relationshipName>
    <type>Lookup</type>
</CustomField>