force-app/main/default/objects/RMA__c/fields/Approval_available__c.field-meta.xml
<CustomField>
    <fullName>Approval_available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the Commercial RMA has been approved in written form by the ASM or Regional VP Sales, according to the Signing Rules in TWiki</description>
    <inlineHelpText>Check if the Commercial RMA has been approved in written form by the ASM or Regional VP Sales according to the Signing Rules.
If not checked, the Commercial RMA is not authorized.</inlineHelpText>
    <label>Approval available</label>
    <type>Checkbox</type>
</CustomField>