force-app/main/default/objects/RMA__c/fields/Commercial_Decision__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Decision__c</fullName>
    <label>Commercial Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit Note without Replacement</fullName>
            </value>
            <value>
                <fullName>Credit Note with Replacement</fullName>
            </value>
            <value>
                <fullName>Return with FW Upgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>