force-app/main/default/objects/RMA__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contact person at customer.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RMAs</relationshipLabel>
    <relationshipName>RMAs</relationshipName>
    <type>Lookup</type>
</CustomField>