force-app/main/default/objects/RMA__c/fields/Contact_Ext_Party__c.field-meta.xml
<CustomField>
    <fullName>Contact_Ext_Party__c</fullName>
    <inlineHelpText>Contact person at external party. Note name, phone, email</inlineHelpText>
    <label>Contact Ext. Party</label>
    <type>TextArea</type>
</CustomField>