force-app/main/default/objects/RMA__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <description>Cost of the Replacement / Credit Note</description>
    <inlineHelpText>Cost in CHF: If Replacement, calculate with the cost of sales; if credit note, take the original sales price when the parts have been sold.</inlineHelpText>
    <label>Cost</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>