force-app/main/default/objects/RMA__c/fields/Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note__c</fullName>
    <inlineHelpText>Credit Note #, given by Abacus</inlineHelpText>
    <label>Credit Note #</label>
    <length>6</length>
    <type>Text</type>
</CustomField>