force-app/main/default/objects/RMA__c/fields/Customer_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Customer_Complaint__c</fullName>
    <label>Customer Complaint</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>