force-app/main/default/objects/RMA__c/fields/Date_Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Date_Credit_Note__c</fullName>
    <label>Date Credit Note</label>
    <type>Date</type>
</CustomField>