force-app/main/default/objects/RMA__c/fields/Date_Failure_Report__c.field-meta.xml
<CustomField>
    <fullName>Date_Failure_Report__c</fullName>
    <label>Date Failure Report sent to customer</label>
    <type>Date</type>
</CustomField>