force-app/main/default/objects/RMA__c/fields/Date_Hand_over_to_Q__c.field-meta.xml
<CustomField>
    <fullName>Date_Hand_over_to_Q__c</fullName>
    <description>Date when the RMA including defective parts is handed over to the Q Dpt.</description>
    <inlineHelpText>Date when the RMA including defective parts is handed over to the Q Dpt.</inlineHelpText>
    <label>Date Hand-over to Q</label>
    <type>Date</type>
</CustomField>