force-app/main/default/objects/RMA__c/fields/Date_Parts_received__c.field-meta.xml
<CustomField>
    <fullName>Date_Parts_received__c</fullName>
    <label>Date Parts Received</label>
    <type>Date</type>
</CustomField>