force-app/main/default/objects/RMA__c/fields/Date_received_from_Fab__c.field-meta.xml
<CustomField>
    <fullName>Date_received_from_Fab__c</fullName>
    <label>Date received from Fab</label>
    <type>Date</type>
</CustomField>