force-app/main/default/objects/RMA__c/fields/Date_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Date_Replacement__c</fullName>
    <inlineHelpText>Date when the replacement has been done.</inlineHelpText>
    <label>Date Replacement</label>
    <type>Date</type>
</CustomField>