force-app/main/default/objects/RMA__c/fields/Date_Return_from_Q__c.field-meta.xml
<CustomField>
    <fullName>Date_Return_from_Q__c</fullName>
    <label>Date Return from Q</label>
    <type>Date</type>
</CustomField>