force-app/main/default/objects/RMA__c/fields/Date_RMA_created__c.field-meta.xml
<CustomField>
    <fullName>Date_RMA_created__c</fullName>
    <description>displays the day when the RMA has been opened</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date RMA created</label>
    <type>Date</type>
</CustomField>