force-app/main/default/objects/RMA__c/fields/Date_Shipped_to_Ext_Party__c.field-meta.xml
<CustomField>
    <fullName>Date_Shipped_to_Ext_Party__c</fullName>
    <label>Date Shipped to Ext. Party</label>
    <type>Date</type>
</CustomField>