force-app/main/default/objects/RMA__c/fields/Date_Transferred_to_AE__c.field-meta.xml
<CustomField>
    <fullName>Date_Transferred_to_AE__c</fullName>
    <label>Date Transferred to AE</label>
    <type>Date</type>
</CustomField>