force-app/main/default/objects/RMA__c/fields/Days_analysis_open__c.field-meta.xml
<CustomField>
    <fullName>Days_analysis_open__c</fullName>
    <formula>case( RMA_Status__c ,
   &quot;6 Closed&quot;, Date_Failure_Report__c - Date_Parts_received__c ,
   today() - Date_Parts_received__c
   )</formula>
    <inlineHelpText>(Date Parts received) until (Date Failure Report sent to customer)</inlineHelpText>
    <label>Days Analysis Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>