force-app/main/default/objects/RMA__c/fields/Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Open__c</fullName>
    <description>Status open: today - create date
Status closed. date failure report - create date</description>
    <formula>case( RMA_Status__c ,
&quot;6 Closed&quot;, Date_Failure_Report__c  - datevalue(CreatedDate),
today() - datevalue(CreatedDate)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days the RMA has been open</inlineHelpText>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>