force-app/main/default/objects/RMA__c/fields/Days_until_parts_received__c.field-meta.xml
<CustomField>
    <fullName>Days_until_parts_received__c</fullName>
    <formula>Date_Parts_received__c  -  Date_RMA_created__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days until u-blox received parts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>