force-app/main/default/objects/RMA__c/fields/Days_Wrap_up_open__c.field-meta.xml
<CustomField>
    <fullName>Days_Wrap_up_open__c</fullName>
    <formula>case( RMA_Status__c ,
&quot;6 Closed&quot;,  Date_Credit_Note__c  -  Date_Parts_received__c ,
today() - Date_Parts_received__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Date_Parts_received) until (Date_Credit_Note)</inlineHelpText>
    <label>Days Wrap-up open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>