force-app/main/default/objects/RMA__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Closed without replacement</fullName>
            </value>
            <value>
                <fullName>Warranty replacement</fullName>
            </value>
            <value>
                <fullName>Goodwill replacement</fullName>
            </value>
            <value>
                <fullName>Goodwill credit note</fullName>
            </value>
            <value>
                <fullName>Warranty credit note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>