force-app/main/default/objects/RMA__c/fields/Decision_Taken_By__c.field-meta.xml
<CustomField>
    <fullName>Decision_Taken_By__c</fullName>
    <label>Decision Taken By</label>
    <length>40</length>
    <type>Text</type>
</CustomField>