force-app/main/default/objects/RMA__c/fields/Detection_of_Failure__c.field-meta.xml
<CustomField>
    <fullName>Detection_of_Failure__c</fullName>
    <description>Describe how the customer detected the failure/non conformity (e.g. Electrical test, Visual Inspection, QA inspection).</description>
    <inlineHelpText>Describe how the customer detected the failure/non conformity (e.g. Electrical test, Visual Inspection, QA inspection).</inlineHelpText>
    <label>Detection of Failure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>