force-app/main/default/objects/RMA__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <label>Distributor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>