force-app/main/default/objects/RMA__c/fields/Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Name__c</fullName>
    <description>Value copied from user.distributor_name__c with APEX code.</description>
    <inlineHelpText>Used to grant access to external partners via sharing rules.</inlineHelpText>
    <label>Distributor Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>