force-app/main/default/objects/RMA__c/fields/External_Party__c.field-meta.xml
<CustomField>
    <fullName>External_Party__c</fullName>
    <label>External Party</label>
    <type>TextArea</type>
</CustomField>