force-app/main/default/objects/RMA__c/fields/FAE__c.field-meta.xml
<CustomField>
    <fullName>FAE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FAE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RMAs</relationshipName>
    <type>Lookup</type>
</CustomField>