force-app/main/default/objects/RMA__c/fields/Failure_detail__c.field-meta.xml
<CustomField>
    <fullName>Failure_detail__c</fullName>
    <description>Indicates what exactly the error was</description>
    <inlineHelpText>Indicates what exactly the error was</inlineHelpText>
    <label>Failure detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Failure_mode__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>wrong p/n offered</fullName>
            </value>
            <value>
                <fullName>wrong p/n requested at logistics</fullName>
            </value>
            <value>
                <fullName>wrong p/n confirmed by logistics</fullName>
            </value>
            <value>
                <fullName>wrong p/n entered in Abacus order</fullName>
            </value>
            <value>
                <fullName>wrong qty entered in Abacus order</fullName>
            </value>
            <value>
                <fullName>type number changed over time</fullName>
            </value>
            <value>
                <fullName>wrong p/n ordered</fullName>
            </value>
            <value>
                <fullName>wrong qty ordered - goodwill return</fullName>
            </value>
            <value>
                <fullName>return for FW upgrade</fullName>
            </value>
            <value>
                <fullName>expedite packs wrong parts</fullName>
            </value>
            <value>
                <fullName>expedite mixes up parcels</fullName>
            </value>
            <value>
                <fullName>expedite packs wrong quantity</fullName>
            </value>
            <value>
                <fullName>stock return to u-blox</fullName>
            </value>
            <value>
                <fullName>Flex produced wrong version (FW or HW)</fullName>
            </value>
            <value>
                <fullName>Damaged product</fullName>
            </value>
            <value>
                <fullName>Flextronics label issue</fullName>
            </value>
            <value>
                <fullName>Amkor label issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>