force-app/main/default/objects/RMA__c/fields/Failure_mode__c.field-meta.xml
<CustomField>
    <fullName>Failure_mode__c</fullName>
    <description>Indicates where the error has happened</description>
    <inlineHelpText>Indicates where the error has happened</inlineHelpText>
    <label>Failure mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Failure u-blox</fullName>
            </value>
            <value>
                <fullName>Failure Customer</fullName>
            </value>
            <value>
                <fullName>Failure expedite</fullName>
            </value>
            <value>
                <fullName>Failure Production</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>