force-app/main/default/objects/RMA__c/fields/Findings_AE__c.field-meta.xml
<CustomField>
    <fullName>Findings_AE__c</fullName>
    <label>Findings AE</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>