force-app/main/default/objects/RMA__c/fields/Findings_Ext_Party__c.field-meta.xml
<CustomField>
    <fullName>Findings_Ext_Party__c</fullName>
    <label>Findings Ext. Party</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>