force-app/main/default/objects/RMA__c/fields/Findings_FAE__c.field-meta.xml
<CustomField>
    <fullName>Findings_FAE__c</fullName>
    <label>Findings FAE</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>