force-app/main/default/objects/RMA__c/fields/Findings_Quality__c.field-meta.xml
<CustomField>
    <fullName>Findings_Quality__c</fullName>
    <label>Findings Quality</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>