force-app/main/default/objects/RMA__c/fields/NOT_USED_Detection_of_Failure__c.field-meta.xml
<CustomField>
    <fullName>NOT_USED_Detection_of_Failure__c</fullName>
    <label>NOT USED Detection of Failure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upon shipping (before arrival at customer)</fullName>
            </value>
            <value>
                <fullName>Incoming inspection at customer</fullName>
            </value>
            <value>
                <fullName>Before assembly</fullName>
            </value>
            <value>
                <fullName>Assembly end test</fullName>
            </value>
            <value>
                <fullName>Arrival at end customer</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>