force-app/main/default/objects/RMA__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates RMA to Opportunity</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>R00N20000000pXDYEA2</relationshipName>
    <type>Lookup</type>
</CustomField>