force-app/main/default/objects/RMA__c/fields/Origin_of_failure_at_customer__c.field-meta.xml
<CustomField>
    <fullName>Origin_of_failure_at_customer__c</fullName>
    <inlineHelpText>Where was the failure detected?</inlineHelpText>
    <label>Origin of Failure at Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>0km / 0hrs failure</fullName>
            </value>
            <value>
                <fullName>Upon shipping (before arrival at customer)</fullName>
            </value>
            <value>
                <fullName>Incoming inspection at customer</fullName>
            </value>
            <value>
                <fullName>Before assembly</fullName>
            </value>
            <value>
                <fullName>Assembly end test</fullName>
            </value>
            <value>
                <fullName>Arrival at end customer</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>