force-app/main/default/objects/RMA__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Person who handles the RMA</inlineHelpText>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RMAs4</relationshipName>
    <type>Lookup</type>
</CustomField>