force-app/main/default/objects/RMA__c/fields/Parts_received_from_Fab__c.field-meta.xml
<CustomField>
    <fullName>Parts_received_from_Fab__c</fullName>
    <label>Parts received from Fab</label>
    <type>Date</type>
</CustomField>