force-app/main/default/objects/RMA__c/fields/Product_Center__c.field-meta.xml
<CustomField>
    <fullName>Product_Center__c</fullName>
    <formula>text( Product_Name__r.Product_Center__c )</formula>
    <label>Product Center</label>
    <type>Text</type>
</CustomField>