force-app/main/default/objects/RMA__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>RMAs</relationshipLabel>
    <relationshipName>R00N20000000pX12EAE</relationshipName>
    <type>Lookup</type>
</CustomField>