force-app/main/default/objects/RMA__c/fields/Qty_Delivered_to_AE__c.field-meta.xml
<CustomField>
    <fullName>Qty_Delivered_to_AE__c</fullName>
    <label>Qty Delivered to AE</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>