force-app/main/default/objects/RMA__c/fields/Qty_Delivered_to_Ext_Party__c.field-meta.xml
<CustomField>
    <fullName>Qty_Delivered_to_Ext_Party__c</fullName>
    <label>Qty Delivered to Ext. Party</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>