force-app/main/default/objects/RMA__c/fields/Qty_Hand__c.field-meta.xml
<CustomField>
    <fullName>Qty_Hand__c</fullName>
    <label>Qty Hand-over to Q</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>