force-app/main/default/objects/RMA__c/fields/Qty_Received_from_AE__c.field-meta.xml
<CustomField>
    <fullName>Qty_Received_from_AE__c</fullName>
    <label>Qty Received from AE</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>