force-app/main/default/objects/RMA__c/fields/Qty_received_from_customer__c.field-meta.xml
<CustomField>
    <fullName>Qty_received_from_customer__c</fullName>
    <label>Qty Received from Customer</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>