force-app/main/default/objects/RMA__c/fields/Qty_Returned_from_Q__c.field-meta.xml
<CustomField>
    <fullName>Qty_Returned_from_Q__c</fullName>
    <label>Qty Returned from Q</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>