force-app/main/default/objects/RMA__c/fields/Qty_Returned_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Qty_Returned_to_Customer__c</fullName>
    <label>Qty Returned to Customer</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>