force-app/main/default/objects/RMA__c/fields/Quality_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Quality_Engineer__c</fullName>
    <description>Name of the Quality Engineer to whom the parts have been handed.</description>
    <label>Quality Engineer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>