force-app/main/default/objects/RMA__c/fields/Quantity_replaced__c.field-meta.xml
<CustomField>
    <fullName>Quantity_replaced__c</fullName>
    <inlineHelpText>Number of pieces that have been sold as replacement for the parts tha have been taken back</inlineHelpText>
    <label>Quantity replaced</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>