force-app/main/default/objects/RMA__c/fields/Reaction_Time__c.field-meta.xml
<CustomField>
    <fullName>Reaction_Time__c</fullName>
    <description>(Date Failure Report sent to customer) - Date (Parts Received)</description>
    <formula>Date_Failure_Report__c - Date_Parts_received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Date Parts Received) until (Date Failure Report sent to customer)</inlineHelpText>
    <label>Reaction Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>