force-app/main/default/objects/RMA__c/fields/Reaction_Time_commercial__c.field-meta.xml
<CustomField>
    <fullName>Reaction_Time_commercial__c</fullName>
    <formula>Date_Credit_Note__c  - Date_Parts_received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Date_Parts_received) until (Date_Credit_Note)</inlineHelpText>
    <label>Reaction Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>