force-app/main/default/objects/RMA__c/fields/Receiving_FAE__c.field-meta.xml
<CustomField>
    <fullName>Receiving_FAE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FAE who receives the parts back from Quality</description>
    <label>Receiving FAE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RMAs3</relationshipName>
    <type>Lookup</type>
</CustomField>