force-app/main/default/objects/RMA__c/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Case related to this RMA</inlineHelpText>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>RMAs</relationshipLabel>
    <relationshipName>RMAs</relationshipName>
    <type>Lookup</type>
</CustomField>