force-app/main/default/objects/RMA__c/fields/Related_Issue__c.field-meta.xml
<CustomField>
    <fullName>Related_Issue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Issue</label>
    <referenceTo>Issue__c</referenceTo>
    <relationshipLabel>RMAs</relationshipLabel>
    <relationshipName>RMAs</relationshipName>
    <type>Lookup</type>
</CustomField>