force-app/main/default/objects/RMA__c/fields/Remarks_Wrap_up__c.field-meta.xml
<CustomField>
    <fullName>Remarks_Wrap_up__c</fullName>
    <label>Remarks Wrap-up</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>