force-app/main/default/objects/RMA__c/fields/Replacement_Action__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Action__c</fullName>
    <label>Replacement Action</label>
    <type>TextArea</type>
</CustomField>