force-app/main/default/objects/RMA__c/fields/Replacement_executed_by__c.field-meta.xml
<CustomField>
    <fullName>Replacement_executed_by__c</fullName>
    <label>Replacement executed by</label>
    <length>30</length>
    <type>Text</type>
</CustomField>