force-app/main/default/objects/RMA__c/fields/RMA_Status__c.field-meta.xml
<CustomField>
    <fullName>RMA_Status__c</fullName>
    <label>RMA Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 New</fullName>
                <default>true</default>
                <label>1 New</label>
            </value>
            <value>
                <fullName>2 Analysis FAE</fullName>
            </value>
            <value>
                <fullName>3 Analysis AE</fullName>
            </value>
            <value>
                <fullName>4 External Analysis</fullName>
            </value>
            <value>
                <fullName>5 Wrap-up</fullName>
            </value>
            <value>
                <fullName>6 Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>