force-app/main/default/objects/RMA__c/fields/RMA_Type__c.field-meta.xml
<CustomField>
    <fullName>RMA_Type__c</fullName>
    <inlineHelpText>set to unauthorized if parts are sent without prior acceptance by u-blox. Once set, do not change value anymore.</inlineHelpText>
    <label>RMA Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Authorized</fullName>
            </value>
            <value>
                <fullName>Unauthorized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>