force-app/main/default/objects/RMA__c/fields/Short_Description_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Short_Description_Complaint__c</fullName>
    <label>Short Description Complaint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>