force-app/main/default/objects/RMA__c/fields/Test_Date_FAE__c.field-meta.xml
<CustomField>
    <fullName>Test_Date_FAE__c</fullName>
    <inlineHelpText>Start of analysis by FAE</inlineHelpText>
    <label>Test Date FAE</label>
    <type>Date</type>
</CustomField>