force-app/main/default/objects/RMA__c/fields/Tested_by__c.field-meta.xml
<CustomField>
    <fullName>Tested_by__c</fullName>
    <label>Not Used Tested by</label>
    <length>30</length>
    <type>Text</type>
</CustomField>