force-app/main/default/objects/RMA__c/fields/Tested_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Tested_Quantity__c</fullName>
    <label>Not Used Tested Quantity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>