force-app/main/default/objects/RMA__c/fields/Traceability_Info__c.field-meta.xml
<CustomField>
    <fullName>Traceability_Info__c</fullName>
    <inlineHelpText>For Modules: Serial Number and week code
For IC: Lot number (as in the IC marking) and week code
For Reels/Trays: reel number (Modules) Lot number (Ics)</inlineHelpText>
    <label>Traceability Info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>