force-app/main/default/objects/RMA__c/fields/Tracking_Info__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Info__c</fullName>
    <label>Tracking Info</label>
    <length>40</length>
    <type>Text</type>
</CustomField>