force-app/main/default/objects/RMA__c/fields/Tracking_Info_Return_Material__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Info_Return_Material__c</fullName>
    <label>Tracking Info Return Material</label>
    <length>40</length>
    <type>Text</type>
</CustomField>