force-app/main/default/objects/RMA__c/fields/Type_Number_replaced__c.field-meta.xml
<CustomField>
    <fullName>Type_Number_replaced__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Type Number replaced</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>RMAs (Type Number replaced)</relationshipLabel>
    <relationshipName>RMAs</relationshipName>
    <type>Lookup</type>
</CustomField>