force-app/main/default/objects/RMA__c/fields/u_blox_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>u_blox_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Coordinator with external party</inlineHelpText>
    <label>u-blox Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RMAs2</relationshipName>
    <type>Lookup</type>
</CustomField>