force-app/main/default/objects/RMA__c/fields/uB_Office__c.field-meta.xml
<CustomField>
    <fullName>uB_Office__c</fullName>
    <formula>CASE(  Account_Name__r.uB_Office__c  ,
&quot;Americas&quot;,&quot;Americas&quot;,
&quot;EMEA&quot;,&quot;EMEA&quot;,
&quot;China&quot;, &quot;China&quot;,
&quot;Hongkong&quot;, &quot;Hongkong&quot;,
&quot;Taiwan&quot;, &quot;Taiwan&quot;,
&quot;Korea&quot;, &quot;Korea&quot;,
&quot;Japan&quot;, &quot;Japan&quot;,
&quot;India&quot;, &quot;India&quot;,
&quot;Australia&quot;, &quot;Australia&quot;,
&quot;Rest of APAC&quot;, &quot;Rest of APAC&quot;,
&quot;HQ&quot;)</formula>
    <inlineHelpText>Copied from Account</inlineHelpText>
    <label>uB Office</label>
    <type>Text</type>
</CustomField>