force-app/main/default/objects/RMA__c/recordTypes/RMA_commercial.recordType-meta.xml
<RecordType>
    <fullName>RMA_commercial</fullName>
    <active>true</active>
    <description>RMA commercial</description>
    <label>RMA commercial</label>
</RecordType>