force-app/main/default/objects/RMA__c/recordTypes/RMA_technical.recordType-meta.xml
<RecordType>
    <fullName>RMA_technical</fullName>
    <active>true</active>
    <description>RMA technical</description>
    <label>RMA technical</label>
</RecordType>